--- a/src/app.html
+++ b/src/app.html
@@ -17,7 +17,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="h-screen bg-primary bg-opacity-100">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
