--- a/src/app.html
+++ b/src/app.html
@@ -5,20 +5,17 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
-			rel="stylesheet"
-		/>
+		<link href="https://fonts.googleapis.com/css2?family=Inder&display=swap" rel="stylesheet" />
 		<style>
 			body {
-				font-family: 'Rubik', sans-serif;
+				font-family: 'Inder', sans-serif;
 			}
 		</style>
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="h-screen bg-gray-300 bg-opacity-100">
-	<!-- -->
+	<body data-sveltekit-preload-data="hover" class="h-screen bg-color-main bg-opacity-100">
+		<!-- -->
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
