--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="h-screen bg-color-main bg-opacity-100">
+	<body data-sveltekit-preload-data="hover" class="h-screen bg-opacity-100 bg-main">
 		<!-- -->
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
