--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,41 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<!-- Control headers -->
+		<!-- Primary Meta Tags -->
+		<title>Iris — Message, Call and Communicate</title>
+		<meta name="title" content="Iris — Message, Call and Communicate" />
+		<meta
+			name="description"
+			content="Iris is a fast, secure and minimal chat platform that does not track any personal info"
+		/>
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://metatags.io/" />
+		<meta property="og:title" content="Iris — Message, Call and Communicate" />
+		<meta
+			property="og:description"
+			content="Iris is a fast, secure and minimal chat platform that does not track any personal info"
+		/>
+		<meta
+			property="og:image"
+			content="https://static.zerochan.net/Kurata.Mashiro.full.2879531.jpg"
+		/>
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://metatags.io/" />
+		<meta property="twitter:title" content="Iris — Message, Call and Communicate" />
+		<meta
+			property="twitter:description"
+			content="Iris is a fast, secure and minimal chat platform that does not track any personal info"
+		/>
+		<meta
+			property="twitter:image"
+			content="https://static.zerochan.net/Kurata.Mashiro.full.2879531.jpg"
+		/>
+		<!-- Control headers END-->
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +49,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="h-screen bg-opacity-100 bg-main">
+	<body data-sveltekit-preload-data="hover" class="h-screen bg-main bg-opacity-100">
 		<!-- -->
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
