--- a/src/app.html
+++ b/src/app.html
@@ -46,11 +46,14 @@
 				font-family: 'Inder', sans-serif;
 			}
 		</style>
+
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="h-screen bg-main bg-opacity-100">
-		<!-- -->
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
+	<style id="rootOverrides">
+		&nbsp;
+	</style>
 </html>
