--- a/src/app.html
+++ b/src/app.html
@@ -38,14 +38,14 @@
 		/>
 		<!-- Control headers END-->
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
 		<style>
 			body {
 				font-family: 'Inter', sans-serif;
 			}
-		</style>
+		</style> -->
 
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
