Overhaul-001 Basic messaging view complete.

--- a/src/app.html
+++ b/src/app.html
@@ -50,7 +50,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="h-screen bg-main bg-opacity-100">
+	<body data-sveltekit-preload-data="hover" class="h-screen bg-NORD1 bg-opacity-100">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 	<style id="rootOverrides">
